# meridian

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  gradio_app.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/agents/: __init__.py  conversation_context.py  langraph_orchestrator.py  llm_client.py  orchestrator.py  router.py  streaming.py
app/agents/domain/: __init__.py  base_domain.py  finance.py  operations.py  sales.py
app/api/: __init__.py  middleware.py
app/api/routes/: __init__.py  admin.py  export.py  history.py  jobs.py  query.py  stream.py
app/auth/: __init__.py  constants.py  dependencies.py  jwt.py  oauth.py  permissions.py  providers.py  routes.py  store.py
app/cache/: __init__.py  manager.py
app/core/: exceptions.py
app/database/: __init__.py  connection.py  index_optimizer.py
app/explain/: __init__.py  builder.py
app/export/: __init__.py  exporters.py
app/history/: __init__.py  manager.py
app/jobs/: __init__.py  store.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/onboarding/: __init__.py  agent_factory.py  models.py  registry.py
app/query/: __init__.py  builder.py  pagination.py  time_intelligence.py  validator.py
app/ui/: helpers.py
app/views/: models.py  registry.py  seed.py
app/visualization/: __init__.py  chart_selector.py
config/: development.yaml  production.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.dev
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  AUTH.md  BENCHMARKS.md  CHANGELOG.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  MERIDIAN_QUICK_START_GUIDE.md  MERIDIAN_README.md  MULTI_AGENT_PROTOTYPE_ROADMAP_v2.md  PHASE_3_4_COMPLETION.md  PHASE_5_COMPLETION.md  PHASE_6_COMPLETION.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SETUP.md  index.html
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  meridian.json
scripts/: setup_db.py
tests/integration/: __init__.py  test_advanced_features.py  test_agents.py  test_auth_api.py  test_history_api.py  test_orchestrator.py  test_phase3_phase4.py  test_phase7_api.py  test_ui_queries.py  test_views.py
tests/performance/: test_load.py
tests/unit/: test_auth.py  test_gradio_ui_helpers.py  test_llm_phase3.py  test_oauth.py  test_phase2.py  test_phase4.py  test_phase6.py  test_phase7.py  test_phase9_observability.py  test_sql_syntax_validation.py  test_views.py
