[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian"
version = "0.1.0"
description = "Intelligent Data Navigation Platform - Multi-agent system for AI-powered data queries"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "MERIDIAN Team", email = "team@meridian-ai.com"}
]
keywords = ["ai", "agents", "langchain", "data-navigation", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.4",
    "langchain-openai>=0.0.6",
    "langchain-community>=0.0.10",
    "langgraph>=0.1.1",
    "openai>=1.3.0",
    "tenacity>=8.2.3",
    "sqlalchemy>=2.0.23",
    "pandas>=2.1.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
]
observability = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-trace-jaeger>=1.21.0",
]
redis = [
    "redis>=5.0.0",
    "langchain-redis>=0.1.0",
]
prod = [
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/meridian-ai/meridian"
Documentation = "https://meridian-ai.com/docs"
Repository = "https://github.com/meridian-ai/meridian.git"
Issues = "https://github.com/meridian-ai/meridian/issues"

[tool.setuptools]
packages = ["app", "tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
known_third_party = ["langchain", "fastapi", "pydantic"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = false
exclude = [
    "venv/",
    "tests/",
    "migrations/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
]
